--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -5,7 +5,7 @@
   <form (submit)="onSubmit()" #form="ngForm">
     <label for="name">Name</label>
     <input type="text" name="name" required minlength="3" [(ngModel)]="user.name" #name="ngModel" class="form-control">
-    <div *ngIf="name.invalid && (name.dirty || name.touched)">Required</div><br>
+    <div *ngIf="name.invalid && (name.dirty || name.touched)">Minimum 3 characters</div><br>
     <button class="btn btn-success" type="submit" [disabled]="form.invalid">Login</button>
   </form>
 </div>
